--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,16 @@
-/** {*/
-/*    margin: 0;*/
-/*    padding: 0;*/
-/*    border: 0;*/
-/*}*/
+h1, h2, h3, h4, h5 , h6 {
+    text-decoration: underline ;
+}
 
-/*.fancy-header {*/
-/*    color: blue; !* single line comment *!*/
-/*    text-decoration: underline;*/
+.fancy-header {
+    text-align: center;
+}
 
 
 body {
-    font-family: Serif;
+    font-family: "Oswald", sans-serif;
+    background-color: #8d8d8d;
+
 }
 
 .pics {
@@ -21,4 +21,28 @@ body {
     padding: 20px;
     width: 300px;
     height: 300px;
+}
+
+main {
+    background-image: url("/images/background-image.png");
+
+}
+
+
+
+.column1 {
+    max-width: 500px;
+    margin-left: 250px;
+
+}
+.column2 {
+    max-width: 500px;
+    margin-left: 550px;
+
+}
+
+.column3 {
+    max-width: 500px;
+    margin-left: 800px;
+
 }
