--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,17 @@ h1, h2, h3, h4, h5 , h6 {
 
 .fancy-header {
     text-align: center;
+    background: linear-gradient(145deg, #f0f0f0, #cacaca);
+    box-shadow:  25px 25px 51px #bebebe,
+    -25px -25px 51px #ffffff;
 }
 
 
 body {
     font-family: "Oswald", sans-serif;
     background-color: #8d8d8d;
+    box-shadow:  25px 25px 51px #bebebe,
+    -25px -25px 51px #ffffff;
 
 }
 
@@ -25,6 +30,8 @@ body {
 
 main {
     background-image: url("/images/background-image.png");
+    box-shadow:  25px 25px 51px #bebebe,
+    -25px -25px 51px #ffffff;
 
 }
 
