--- a/css/flexbox-nav-exercise.css
+++ b/css/flexbox-nav-exercise.css
@@ -53,3 +53,15 @@ button {
     font-size: 15px;
     transition: .4s;
 }
+
+button:hover {
+    transform: scale(1.3);
+    cursor: pointer;
+    color: #efc549;
+
+}
+
+.logo {
+    display: flex;
+    justify-content: center;
+}
